--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -6,13 +6,13 @@
         android:id="@+id/busqueda"
         android:icon="@drawable/icono_busqueda"
         android:title="Search"
-        app:actionViewClass="android.widget.SearchView"
-        app:showAsAction="ifRoom|collapseActionView"></item>
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/bfav"
         android:icon="@drawable/fav"
         android:title="@string/titulo_fav"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/share"
         android:title="Compartir"
